Convert project to Java 19 (at long last)